@@ -7,7 +7,7 @@ Not yet released - available from CVS or in the latest snapshot:
 Enhancements:
 
 Oracle Plugin:
-
+ - Added validity (VALID|INVALID) field to trigger details tab for triggers.
  - Allow the user to configure whether or not to show the syntax error offset in 
    the SQL Editor.  This feature creates a user-defined function called 
    SQUIRREL_GET_ERROR_OFFSET, which can be disabled.
